# json_compatibility_test

./: .gitignore  LICENSE  README.md  diff.xsl  json-compatibility-test.cabal  render_json_diff.xsl
src/: JsonCompatibilityTest.hs  Main.hs
src/JsonCompatibilityTest/: Compare.hs  Model.hs  Spec.hs  XML.hs
test/: TestGolden.hs
test/JsonCompatibilityTest/: Tests.hs
test/golden/: array.golden.xml  array.left.json  array.right.json  array.spec.json  pizza.golden.xml  pizza.right.json  pizza.spec.json  same.golden.xml  same.right.json
