name:                json-compatibility-test
version:             0.1.0.0
synopsis:            A command line tool to test if one JSON file is backwards compatible with another
-- description:
homepage:            https://github.com/mkorneev/json-compatibility-test
license:             MIT
license-file:        LICENSE
author:              Maxim Korneev
maintainer:          maxim@mkorneev.com
copyright:           2018 Maxim Korneev
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     JsonCompatibilityTest
                       JsonCompatibilityTest.Model
                       JsonCompatibilityTest.Compare
                       JsonCompatibilityTest.Spec
                       JsonCompatibilityTest.XML
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       bytestring,
                       text,
                       containers,
                       scientific,
                       xml-conduit,
                       xml-hamlet,
                       vector,
                       time,
                       iso8601-time,
                       split,
                       raw-strings-qq,
                       unordered-containers

executable json_compatibility_test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       JsonCompatibilityTest,
                       JsonCompatibilityTest.Model
                       JsonCompatibilityTest.Compare
                       JsonCompatibilityTest.Spec
                       JsonCompatibilityTest.XML
                       Paths_json_compatibility_test
  autogen-modules:     Paths_json_compatibility_test
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       bytestring,
                       text,
                       containers,
                       xml-conduit,
                       xml-hamlet,
                       HUnit,
                       vector,
                       raw-strings-qq,
                       unordered-containers,
                       time,
                       iso8601-time,
                       split,
                       scientific,
                       cmdargs,
                       json-compatibility-test

test-suite test-golden
  default-language:    Haskell2010
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             TestGolden.hs
  build-depends:       base,
                       aeson,
                       tasty,
                       tasty-golden,
                       xml-conduit,
                       bytestring,
                       filepath,
                       Glob,
                       containers,
                       json-compatibility-test

test-suite tests
  default-language:    Haskell2010
  hs-source-dirs:      test/JsonCompatibilityTest
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base,
                       aeson,
                       tasty,
                       tasty-golden,
                       xml-conduit,
                       HUnit,
                       raw-strings-qq,
                       json-compatibility-test
